--- a/src/content/magic-docs/components.mdx
+++ b/src/content/magic-docs/components.mdx
@@ -315,7 +315,7 @@ Cards are used to group related content and actions.
 
 ## Icon
 
-Icons are used to visually represent actions, objects, or concepts. For instructions on importing new icons, head over to [the Once UI documentation](https://docs.once-ui.com/once-ui/icons).
+Icons are used to visually represent actions, objects, or concepts. For instructions on importing new icons, head over to [the Once UI documentation](https://docs.once-ui.com/once-ui/contexts/iconProvider).
 
 <Column fillWidth gap="-1" marginBottom="16" marginTop="8">
 <CodeBlock
@@ -347,7 +347,7 @@ Icons are used to visually represent actions, objects, or concepts. For instruct
     ]}
 />
 <Row fillWidth bottomRadius="l" padding="4" border="neutral-medium" background="surface">
-    <Button href="https://docs.once-ui.com/once-ui/icons" weight="default" label="Learn more" size="s" variant="tertiary" suffixIcon="chevronRight"/>
+    <Button href="https://docs.once-ui.com/once-ui/components/icon" weight="default" label="Learn more" size="s" variant="tertiary" suffixIcon="chevronRight"/>
 </Row>
 </Column>
 
