--- a/src/content/once-ui/components/icon.mdx
+++ b/src/content/once-ui/components/icon.mdx
@@ -148,7 +148,7 @@ By default, icons are considered decorative and hidden from screen readers. Use 
 
 ## Icon library
 
-The Icon component uses icons from the [react-icons](https://react-icons.github.io/react-icons/) library. The available icons are defined in the icon library file. For more information about the icon library, see the [Icons](/once-ui/icons) page.
+The Icon component uses icons from the [react-icons](https://react-icons.github.io/react-icons/) library. The available icons are defined in the icon library file. Learn how to import new icons on the [IconProvider](/once-ui/contexts/iconProvider) page.
 
 <CodeBlock
   marginTop="16"
