--- a/src/content/get-started.mdx
+++ b/src/content/get-started.mdx
@@ -18,7 +18,7 @@ Our core product is Once UI, an open-source design system built to fuel the next
 
 Since our templates are not just static page examples, but functional, production-ready apps, there are a few things you need to know. Please read the documentation for more details, and if you need further help, reach out on [Discord](https://discord.com/invite/5EyAQ4eNdS).
 
-<Grid fillWidth columns="2" mobileColumns="1" gap="12" marginTop="16">
+<Grid fillWidth columns="2" m={{columns: 1}} gap="12" marginTop="16">
     {[
       {
         title: "Once UI Core",
