--- a/src/content/magic-docs/search.mdx
+++ b/src/content/magic-docs/search.mdx
@@ -41,6 +41,6 @@ You can extend the Kbar with custom functionalities by adding new items to the `
     // Add more items
 ];`, 
     language: "tsx",
-    label: "src/app/resources/config.js"
+    label: "src/resources/once-ui.config.js"
   }
 ]} />
