--- a/src/content/magic-portfolio/mailchimp.mdx
+++ b/src/content/magic-portfolio/mailchimp.mdx
@@ -26,7 +26,7 @@ Create a new [embed form](https://mailchimp.com/help/add-a-signup-form-to-your-w
     }
 };`, 
     language: "tsx",
-    label: "src/app/resources/config.js"
+    label: "src/resources/once-ui.config.js"
   }
 ]} />
 
@@ -49,7 +49,7 @@ You can modify the headline and description in the `content.js` file.
     ),
 };`, 
     language: "tsx",
-    label: "src/app/resources/content.js"
+    label: "src/resources/content.js"
   }
 ]} />
 
@@ -104,6 +104,6 @@ There's a pre-configured background in `Mailchimp.tsx` that you can modify in th
   }
 }`, 
     language: "tsx",
-    label: "src/app/resources/config.js"
+    label: "src/resources/once-ui.config.js"
   }
 ]} />
