--- a/src/content/magic-portfolio/password.mdx
+++ b/src/content/magic-portfolio/password.mdx
@@ -22,7 +22,7 @@ The `RouteGuard` component will automatically handle access control for these pa
   '/work/once-ui': true
 };`,
     language: "tsx",
-    label: "src/app/resources/config.js"
+    label: "src/resources/once-ui.config.js"
   }
 ]} />
 
