--- a/src/content/magic-store/mailchimp.mdx
+++ b/src/content/magic-store/mailchimp.mdx
@@ -23,7 +23,7 @@ Create a new [embed form](https://mailchimp.com/help/add-a-signup-form-to-your-w
     action: 'https://url/subscribe/post?parameters',
 };`, 
     language: "tsx",
-    label: "app/resources/config.js"
+    label: "resources/once-ui.config.js"
   }
 ]} />
 
@@ -42,6 +42,6 @@ You can modify the headline and description in the `config.js` file.
     description: <>Get notified about new product drops and offers</>,
 };`, 
     language: "tsx",
-    label: "app/resources/config.js"
+    label: "resources/once-ui.config.js"
   }
 ]} />
