--- a/src/content/magic-store/products.mdx
+++ b/src/content/magic-store/products.mdx
@@ -48,7 +48,7 @@ Manage featured products in Magic Store's `resources/config.js` file:
     }
 ];`,
     language: "tsx",
-    label: "app/resources/config.js"
+    label: "resources/once-ui.config.js"
   }
 ]} />
 
