--- a/src/content/magic-store/promotions.mdx
+++ b/src/content/magic-store/promotions.mdx
@@ -26,6 +26,6 @@ You can use the banner to display promotions or discounts for your store. You ca
     content: <><Icon size="xs" onSolid="brand-strong" name="cart"/>Free delivery on orders above $75</>,
 };`, 
     language: "tsx",
-    label: "app/resources/config.js"
+    label: "resources/once-ui.config.js"
   }
 ]} />
