--- a/src/content/once-ui/components/banner.mdx
+++ b/src/content/once-ui/components/banner.mdx
@@ -126,7 +126,7 @@ Add interactive elements to banners.
   previewPadding="0"
   preview={
     <Column fillWidth>
-      <Banner horizontal="space-between">
+      <Banner horizontal="between">
         Accept our privacy policy to continue.
         <Row gap="8">
           <Button size="s">Decline</Button>
@@ -141,7 +141,7 @@ Add interactive elements to banners.
   codes={[
     {
       code:
-`<Banner horizontal="space-between">
+`<Banner horizontal="between">
     Accept our privacy policy to continue.
     <Row gap="8">
       <Button size="s">Decline</Button>
