--- a/src/content/once-ui/components/dropdownWrapper.mdx
+++ b/src/content/once-ui/components/dropdownWrapper.mdx
@@ -7,7 +7,7 @@ navLabel: "DropdownWrapper"
 navIcon: "components"
 ---
 
-DropdownWrapper is a container component that handles the positioning and state management of dropdown menus. It provides a flexible way to create custom dropdown interfaces with various trigger elements and dropdown contents.
+DropdownWrapper is a container component that handles the positioning and state management of dropdown menus. It provides a flexible way to create custom dropdown interfaces with various trigger elements and dropdown contents. It supports keyboard navigation when used with `Option` components.
 
 ## Basic usage
 
@@ -131,8 +131,6 @@ return (
 ## Custom
 
 Control the dimensions of the dropdown menu.
-
-<Feedback marginY="12" variant="warning" vertical="center" description="The DropdownWrapper component doesn't handle keyboard navigation. Make sure to implement it when using the component."/>
 
 <CodeBlock
   marginTop="16"
