--- a/src/content/once-ui/components/navIcon.mdx
+++ b/src/content/once-ui/components/navIcon.mdx
@@ -39,7 +39,7 @@ function NavIconToggle() {
           background="surface"
           border="surface"
           radius="l" 
-          horizontal="space-between" 
+          horizontal="between" 
           vertical="center"
           fillWidth
         >
