--- a/src/content/once-ui/components/smartLink.mdx
+++ b/src/content/once-ui/components/smartLink.mdx
@@ -38,7 +38,7 @@ Use `fillWidth` to stretch the link across the container. It's useful when you'r
   marginBottom="24"
   preview={
     <SmartLink href="#" fillWidth unstyled>
-      <Row fillWidth background="surface" border="surface" radius="l" padding="16" horizontal="space-between" vertical="center">
+      <Row fillWidth background="surface" border="surface" radius="l" padding="16" horizontal="between" vertical="center">
         <Text>Full width link</Text>
         <Icon name="chevronRight" />
       </Row>
@@ -48,7 +48,7 @@ Use `fillWidth` to stretch the link across the container. It's useful when you'r
     {
       code:
 `<SmartLink href="#" fillWidth unstyled>
-    <Row fillWidth background="surface" border="surface" radius="l" padding="16" horizontal="space-between" vertical="center">
+    <Row fillWidth background="surface" border="surface" radius="l" padding="16" horizontal="between" vertical="center">
       <Text>Full width link</Text>
       <Icon name="chevronRight" />
     </Row>
