--- a/src/content/once-ui/components/toggleButton.mdx
+++ b/src/content/once-ui/components/toggleButton.mdx
@@ -142,7 +142,7 @@ Customize content alignment.
     <Row gap="12" fillWidth>
       <ToggleButton variant="outline" label="Center" horizontal="center" fillWidth />
 <ToggleButton variant="outline" label="End" horizontal="end" fillWidth suffixIcon="chevronRight" />
-<ToggleButton variant="outline" label="Space between" horizontal="space-between" fillWidth prefixIcon="check" suffixIcon="chevronDown" />
+<ToggleButton variant="outline" label="Space between" horizontal="between" fillWidth prefixIcon="check" suffixIcon="chevronDown" />
     </Row>
   }
   codes={[
@@ -150,7 +150,7 @@ Customize content alignment.
       code:
 `<ToggleButton variant="outline" label="Center" horizontal="center" fillWidth />
 <ToggleButton variant="outline" label="End" horizontal="end" fillWidth suffixIcon="chevronRight" />
-<ToggleButton variant="outline" label="Space between" horizontal="space-between" fillWidth prefixIcon="check" suffixIcon="chevronDown" />`,
+<ToggleButton variant="outline" label="Space between" horizontal="between" fillWidth prefixIcon="check" suffixIcon="chevronDown" />`,
       language: "tsx",
       label: "Alignment"
     }
@@ -203,7 +203,7 @@ You can pass custom content to the toggle button.
       "none", "top", "right", "bottom", "left",
       "top-left", "top-right", "bottom-right", "bottom-left"
     ]],
-    ["horizontal", ["start", "center", "end", "space-between"], "center"],
+    ["horizontal", ["start", "center", "end", "between"], "center"],
     ["fillWidth", "boolean", "false"],
     ["weight", ["default", "strong"], "default"],
     ["truncate", "boolean", "false"],
