--- a/src/content/once-ui/data/setup.mdx
+++ b/src/content/once-ui/data/setup.mdx
@@ -208,7 +208,7 @@ When working with time series data, use the `date` prop to define the date forma
 
 Render textual context above the chart with the `title` and `description` props.
 
-<Row fillWidth mobileDirection="column" gap="16" marginTop="16">
+<Row fillWidth s={{direction: "column"}} gap="16" marginTop="16">
 <BarChart
   data-viz-style="divergent"
   title="Wealth distribution"
@@ -282,7 +282,7 @@ Render textual context above the chart with the `title` and `description` props.
 
 Use the `axis` prop to control the visibility of the `x` and `y` axis.
 
-<Row fillWidth mobileDirection="column" gap="16" marginTop="16">
+<Row fillWidth s={{direction: "column"}} gap="16" marginTop="16">
   <LineChart
     title="CEO vs Employee Paycheck"
     axis="both"
@@ -365,7 +365,7 @@ Use the `axis` prop to control the visibility of the `x` and `y` axis.
 
 Use the `legend` prop to control the visibility, position, and direction of the legend.
 
-<Row fillWidth mobileDirection="column" gap="16" marginTop="16">
+<Row fillWidth s={{direction: "column"}} gap="16" marginTop="16">
   <PieChart
     data-viz-style="sequential"
     title="Carbon Emission by Country"
