--- a/src/content/once-ui/modules/megaMenu.mdx
+++ b/src/content/once-ui/modules/megaMenu.mdx
@@ -364,7 +364,7 @@ Use `MegaMenu` for complex navigational layouts where primary sections include s
 
 ## Usage
 
-The `MegaMenu` component is designed for desktop screens. You can hide it at the medium breakpoint by adding the `hide="m"` prop directly to the component. Make sure you design a mobile navigation that works well with your app.
+The `MegaMenu` component is designed for desktop screens. You can hide it at the medium breakpoint by adding the `hide="m"` prop directly to the component.
 
 ## API reference
 
