--- a/src/content/magic-docs/styling.mdx
+++ b/src/content/magic-docs/styling.mdx
@@ -26,7 +26,7 @@ surface:     'translucent',  // filled | translucent
 transition:  'all',          // all | micro | macro
 scaling:     '100',          // 90 | 95 | 100 | 105 | 110`, 
     language: "tsx",
-    label: "src/app/resources/config.js"
+    label: "src/resources/once-ui.config.js"
   }
 ]} />
 
@@ -78,7 +78,7 @@ There's a pre-configured background in `layout.tsx` that you can modify in the c
     }
 }`, 
     language: "tsx",
-    label: "src/app/resources/config.js"
+    label: "src/resources/once-ui.config.js"
   }
 ]} />
 
@@ -115,6 +115,6 @@ The most important layout settings can be customized in the `layout` object in t
     },
 };`, 
     language: "tsx",
-    label: "src/app/resources/config.js"
+    label: "src/resources/once-ui.config.js"
   }
 ]} />
