--- a/src/content/magic-portfolio/content.mdx
+++ b/src/content/magic-portfolio/content.mdx
@@ -31,7 +31,7 @@ const person = {
   ...
 };`,
     language: "tsx",
-    label: "src/app/resources/content.js"
+    label: "src/resources/content.js"
   }
 ]} />
 
@@ -59,7 +59,7 @@ Your personal details are used across the whole app to render personalized headi
     languages: ["English", "Bahasa"], // optional: Leave the array empty if you don't want to display languages
 };`,
     language: "tsx",
-    label: "src/app/resources/content.js"
+    label: "src/resources/content.js"
   }
 ]} />
 
@@ -85,7 +85,7 @@ Social links are rendered on the `/about` page and in the footer based on the ar
     },
 ];`,
     language: "tsx",
-    label: "src/app/resources/content.js"
+    label: "src/resources/content.js"
   }
 ]} />
 
@@ -111,7 +111,7 @@ Each page have it's own object that manages the personalized content, such as he
     ),
 };`,
     language: "tsx",
-    label: "src/app/resources/content.js"
+    label: "src/resources/content.js"
   }
 ]} />
 
