--- a/src/content/magic-portfolio/pages.mdx
+++ b/src/content/magic-portfolio/pages.mdx
@@ -24,7 +24,7 @@ Magic Portfolio's `RouteGuard` component takes care of conditionally rendering p
     '/gallery': false,
 };`,
     language: "tsx",
-    label: "src/app/resources/config.js"
+    label: "src/resources/once-ui.config.js"
   }
 ]} />
 
@@ -49,7 +49,7 @@ When creating a new page, it needs to be added to the `routes` object in the `re
     '/music': true,
 };`,
     language: "tsx",
-    label: "src/app/resources/config.js"
+    label: "src/resources/once-ui.config.js"
   }
 ]} />
 
