--- a/src/content/magic-portfolio/styling.mdx
+++ b/src/content/magic-portfolio/styling.mdx
@@ -26,7 +26,7 @@ surface:     'translucent',  // filled | translucent
 transition:  'all',          // all | micro | macro
 scaling:     '100',          // 90 | 95 | 100 | 105 | 110`, 
     language: "tsx",
-    label: "src/app/resources/config.js"
+    label: "src/resources/once-ui.config.js"
   }
 ]} />
 
@@ -78,6 +78,6 @@ There's a pre-configured background in `layout.tsx` that you can modify in the c
     }
 }`, 
     language: "tsx",
-    label: "src/app/resources/config.js"
+    label: "src/resources/once-ui.config.js"
   }
 ]} />
