--- a/src/content/once-ui/components/logoCloud.mdx
+++ b/src/content/once-ui/components/logoCloud.mdx
@@ -130,7 +130,7 @@ The LogoCloud component extends the Grid component, so you can use all Grid prop
         { wordmark: "/trademark/type-dark.svg", size: "s" }
       ]}
       columns="4"
-      mobileColumns="2"
+      s={{columns: 2}}
       gap="24"
     />
   }
@@ -147,7 +147,7 @@ The LogoCloud component extends the Grid component, so you can use all Grid prop
         { wordmark: "/trademark/type-dark.svg", size: "s" }
     ]}
     columns="4"
-    mobileColumns="2"
+    s={{columns: 2}}
     gap="24"
 />`,
       language: "tsx",
