--- a/src/content/magic-convert/quick-start.mdx
+++ b/src/content/magic-convert/quick-start.mdx
@@ -48,4 +48,4 @@ Start the local development server:
 
 ## Disclaimer
 
-Magic Convert is in public beta. We're currently finalizing the template and preparing the documentation. You can already use it with Once UI Pro and we're happy to assist you with any questions or issues you may have on our Discord server.
+Magic Convert is a beta product. We're currently finalizing the template and preparing the documentation. You can already use it with Once UI Pro and we're happy to assist you with any questions or issues you may have on our Discord server.
