content: change sidebar order and add pro tags

--- a/src/content/vibe-coding.mdx
+++ b/src/content/vibe-coding.mdx
@@ -31,7 +31,7 @@ As you build more with Once UI, AI models will learn your patterns and start sug
 
 ## MCP Server
 
-Agents can pull Once UI documentation through [Context7’s MCP server](https://context7.com/once-ui-system/mcp), supported in editors like Windsurf and Cursor.
+Agents can pull Once UI documentation through [Context7’s MCP server](https://context7.com/once-ui-system/docs), supported in editors like Windsurf and Cursor.
 
 To configure it:
 
